--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
   padding: 0;
   margin: 0;
   overflow: hidden;
@@ -31,10 +30,8 @@ body {
   transform: translateX(-50%);
 }
 
-@media (prefers-color-scheme: dark) {
-  .myarrow:before {
-    border-color: transparent transparent #ffe78d transparent !important;
-  }
+.myarrow:before {
+  border-color: transparent transparent #ffe78d transparent !important;
 }
 
 .page {
